# streams-bench

./: .gitignore  .merlin  LICENSE  Makefile  README.md  _oasis  dune-project  run.sh  streams-bench.install  streams-bench.opam
experiments/: Cases.ml  Concat.ml  Config.ml  Parallel.ml  dune
ppx_stage_strymonas/: Makefile  dune-project
ppx_stage_strymonas/src/: Strymonas.ml  Strymonas_bench.ml  Strymonas_bench.ml.result  Strymonas_example.ml  dune
results/: log.txt  result-1660151746.csv  result-amd_ryzen_7_2700x-1660151746.csv  run-1591727671.txt
src/: .merlin  Cases.ml  Cmd_baseline.ml  Cmd_benchmark.ml  Cmd_core_bench.ml  Cmd_core_bench_opam.ml  Config.ml  Local.ml  Main.ml  Parallel.ml  Pull_cps_skip.ml  Pull_cursor.ml  Pull_cursor_k.ml  Pull_cursor_safe.ml  Pull_cursor_skip.ml  Pull_cursor_ultimate.ml  Pull_exn.ml  Pull_index.ml  Pull_option.ml  Pull_stream_fusion.ml  Pull_thunk_list.ml  Push_bool.ml  Push_fold.ml  Push_fold_k.ml  Push_fold_lazy.ml  Push_fold_ref.ml  Push_fold_ref_safe.ml  Push_fold_stop.ml  Push_fold_thunk.ml  Push_reducer.ml  Push_reducer_bool.ml  Push_reducer_obj.ml  Push_reducer_stop.ml  Push_unit.ml  Standalone.ml  Types.ml  X.ml  bench_basic.ml  bench_fold.ml  bench_village.ml  (+9 more)
tests/: .merlin  Tests.ml  dune
