(library
 (name Cases)
 (public_name streams-bench)
 (modules :standard \ Cmd_core_bench Cmd_benchmark)
 (modes native)
 (libraries unix extunix)
 (ocamlopt_flags -unbox-closures -O3))

(executable
 (name Cmd_benchmark)
 (modules Cmd_benchmark)
 (libraries streams-bench benchmark)
 (modes native)
 (ocamlopt_flags -unbox-closures -O3))

(executable
 (name Cmd_core_bench)
 (modules Cmd_core_bench)
 (libraries streams-bench core_bench)
 (modes native)
 (ocamlopt_flags -unbox-closures -O3))
